tests/ui/box/unit/unique-object-noncopyable.stderr
error[E0599]: no method named `clone` found for struct `Box<dyn Foo>` in the current scope
  --> $DIR/unique-object-noncopyable.rs:24:16
   |
LL |     let _z = y.clone();
   |                ^^^^^ method not found in `Box<dyn Foo>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `Clone`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
